<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >
   <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title2" />

    <Button
        android:id="@+id/button111"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button1" />

    <Button
        android:id="@+id/button222"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button2" />

    <Button
        android:id="@+id/button333"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button3" />

    <Button
        android:id="@+id/button444"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button4" />

</LinearLayout>
